继续优化细节

--- a/QJY.WEB/ViewV5/AppPage/YCGL/CLGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/YCGL/CLGLLIST.html
@@ -53,7 +53,7 @@
                     </td>
                     <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     <td>
-                        <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="EditForm('YCGL_CLGL',el.ID,'',$event)">
+                        <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="EditViewNOWF('YCGL_CLGL',el.ID,'',$event)">
                             <i class="iconfont icon-bianji"></i>
                         </a>
                         <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-click="DELCL(el,$event)">
