--- a/QJY.WEB/ViewV5/AppPage/HYGL/HYSLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/HYGL/HYSLIST.html
@@ -42,7 +42,7 @@
                     </td>
                     <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     <td>
-                        <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="EditForm('HYGL_HYS',el.ID,'',$event)">
+                        <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="EditViewNOWF('HYGL_HYS',el.ID,'',$event)">
                             <i class="iconfont icon-bianji"></i>
                         </a>
                         <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" ms-if="el.IsDel==0" title="禁用" ms-click="DelHYS(el,1,$event)">
