--- a/QJY.WEB/ViewV5/AppPage/TXSX/TXGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/TXSX/TXGLLIST.html
@@ -58,7 +58,7 @@
                     <td>{{el.TXContent}}</td>
                     <td style="min-width:100px;">
                         <span class=" btn-click">
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" ms-if="el.CRUser==userName" title="编辑" ms-click="EditForm('TXSX',el.ID,'',$event)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" ms-if="el.CRUser==userName" title="编辑" ms-click="EditViewNOWF('TXSX',el.ID,'',$event)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" ms-if="el.CRUser==userName" title="删除" ms-click="DELTXSX(el,$event)">
