--- a/QJY.WEB/ViewV5/AppPage/RWGL/RWGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/RWGL/RWGLLIST.html
@@ -86,7 +86,7 @@
                     <td>
                
                         <span class="btn-click">
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="AddView('RWGL','修改任务',el.ID,$event)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="EditViewNOWF('RWGL',el.ID,$event)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName" ms-click="Del(el,$event)">
