--- a/QJY.WEB/ViewV5/AppPage/XMGL/XMGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/XMGL/XMGLLIST.html
@@ -85,7 +85,7 @@
                             <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" title="删除" ms-if="el.CRUser==userName" ms-click="DELXMGL(el,$event)">
                                 <i class="iconfont icon-shanchu"></i>
                             </a>
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName&&el.Status==0" ms-click="EditForm('XMGL',el.ID,'',$event)">
+                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName&&el.Status==0" ms-click="EditViewNOWF('XMGL',el.ID,'',$event)">
                                 <i class="iconfont icon-bianji"></i>
                             </a>
                         </span>
