--- a/QJY.WEB/ViewV5/AppPage/LCSP/PDSZ.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/PDSZ.html
@@ -68,7 +68,7 @@
 
 <div id="dvContent" ms-controller="PDSZ">
     <div class="btn-add">
-        <button type="button" class="btn btn-info btn-lg" ms-click="AddViewNOWF('LCSP/PROCESS')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加工作流表单模板</button>
+        <button type="button" class="btn btn-info btn-lg" ms-click="AddViewNOWF('LCSP_PROCESS')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加工作流表单模板</button>
     </div>
     <div class="tab-filter-type">
         <!-- 搜索 -->
