--- a/QJY.WEB/View_Mobile/UI/UI_LCSP_LCLIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_LCSP_LCLIST.html
@@ -25,7 +25,7 @@
             <div class="list-block" style="margin:0" ms-repeat-lb="LCLBData">
                 <p style="padding: 6px;background-color: whitesmoke;margin:0px;padding-left:10px;border-left: 2px solid #49d2ad;">{{lb}}</p>
                 <ul>
-                    <li class="item-content item-link" ms-repeat-el="LCTypeData" ms-visible="el.RelatedTable==lb" ms-on-tap="vieww(el)">
+                    <li class="item-content item-link" ms-repeat-el="LCTypeData" ms-visible="el.RelatedTable==lb" ms-on-click="vieww(el)">
                         <!--<div class="item-media" style="height:60px"><i class="icon icon-f7"></i></div>-->
                         <div class="item-inner" style="height:60px">
                             <div class="item-title">{{el.ProcessName}}</div>
