--- a/QJY.WEB/View_Mobile/UI/UI_QYWD_LISTN.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYWD_LISTN.html
@@ -679,7 +679,7 @@
                 <div class="list-block cs-list cs-nomarg-nobor media-list">
                     <!-- 文件 -->
                     <ul>
-                        <li ms-repeat-el="wjjData" ms-on-tap="vieww(el)">
+                        <li ms-repeat-el="wjjData" ms-on-click="vieww(el)">
                             <div class="item-content">
                                 <div class="item-media">
                                     <img src="/View_Mobile/Images/qywd/file1.png" width="50">
