--- a/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
+++ b/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
@@ -138,7 +138,7 @@
         <p class="named">最新消息<a style="float:right;margin-right:10px;" onclick="tzurl(4)">更多</a></p>
     </div>
     <div class="list-container">
-        <div class="card" ms-repeat-el="ctData" ms-on-tap="vieww(el)">
+        <div class="card" ms-repeat-el="ctData" ms-on-click="vieww(el)">
 
             <div class="list-block">
                 <ul>
