--- a/QJY.WEB/View_Mobile/UI/UI_CAR_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_CAR_LIST.html
@@ -40,7 +40,7 @@
 
                             <input type="radio" name="hys" ms-attr-value="el.ID">
                             <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
-                            <div class="item-inner" ms-on-tap="vieww(el)">
+                            <div class="item-inner" ms-on-click="vieww(el)">
                                 <div class="item-title-row">
                                     <div class="item-title">【{{el.CarBrand}}】{{el.CarTypeName+'-'+el.CarNum}}<br />{{xszysj(el.ZYSJ)|html}}</div>
                                     <div class="item-after" style="line-height:50px">{{xszt(el.ZT)|html}}</div>
