--- a/QJY.WEB/View_Mobile/UI/UI_DXGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_DXGL_LIST.html
@@ -30,7 +30,7 @@
 
                     <div class="list-block" style="margin:0;">
                         <ul>
-                            <li class="item-content item-link" ms-on-tap="vieww(el)" style="border-bottom: solid 1px #e7e7e7;">
+                            <li class="item-content item-link" ms-on-click="vieww(el)" style="border-bottom: solid 1px #e7e7e7;">
                                 <div class="item-inner">
                                     <div class="item-title">{{el.dxnums}}</div>
                                 </div>
