--- a/QJY.WEB/View_Mobile/UI/UI_XXZX_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_XXZX_LIST.html
@@ -54,12 +54,12 @@
                                 <label class="ui-checkbox" ms-if="el.isRead==0" ms-click="selxx()">
                                     <input type="checkbox" ms-attr-itemid="el.ID">
                                 </label>
-                                <div class="ui-list-info" ms-on-tap="vieww(el)">
+                                <div class="ui-list-info" ms-on-click="vieww(el)">
                                     <h4 class="ui-nowrap">【{{el.MsgType}}】 {{el.CRDate|date("yyyy-MM-dd HH:mm:ss")}}</h4>
                                 </div>
-                                <div class="ui-badge" ms-if="el.isRead==0" ms-on-tap="vieww(el)">未读</div>
+                                <div class="ui-badge" ms-if="el.isRead==0" ms-on-click="vieww(el)">未读</div>
                             </li>
-                            <li class="ui-border-t" ms-on-tap="vieww(el)">
+                            <li class="ui-border-t" ms-on-click="vieww(el)">
                                 <div class="ui-list-info">
                                     <h4 class="ui-nowrap">内容：{{el.MsgContent}}</h4>
                                 </div>
@@ -71,13 +71,13 @@
                                 <label class="label-checkbox item-content" style="padding:0;margin-left:0.5rem">
                                     <input type="checkbox" ms-attr-itemid="el.ID" ms-change="selxx()">
                                     <div class="item-media"  ms-if="el.isRead==0"><i class="icon icon-form-checkbox"></i></div>
-                                    <div class="item-inner" style="font-size:14px" ms-on-tap="vieww(el)">
+                                    <div class="item-inner" style="font-size:14px" ms-on-click="vieww(el)">
                                         <div class="item-title">【{{el.MsgType}}】 {{el.CRDate|date("yyyy-MM-dd HH:mm:ss")}}</div>
-                                        <div class="item-after"><div class="badge" style="background-color:red;color:white;" ms-if="el.isRead==0" ms-on-tap="vieww(el)">未读</div></div>
+                                        <div class="item-after"><div class="badge" style="background-color:red;color:white;" ms-if="el.isRead==0" ms-on-click="vieww(el)">未读</div></div>
                                     </div>
                                 </label>
                             </li>
-                            <li class="item-content" style="padding:0;margin-left:0.5rem" ms-on-tap="vieww(el)">
+                            <li class="item-content" style="padding:0;margin-left:0.5rem" ms-on-click="vieww(el)">
                                 <div class="item-inner" style="font-size:14px">
                                     <div class="item-title">内容：{{el.MsgContent}}</div>
                                 </div>
