--- a/QJY.WEB/View_Mobile/UI/UI_YCGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_YCGL_LIST.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="card-item" ms-if="el.JSR">
                                 <span class="c999 title-item">驾驶员：</span>
-                                <span>{{el.JSR}}</span>
+                                <span>{{ComFunJS.convuser(el.JSR)}}</span>
                             </div>
                             <div class="card-item" ms-if="el.SYRS">
                                 <span class="c999 title-item">用车人数：</span>
