--- a/QJY.WEB/ViewV5/AppPage/YCGL/YCGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/YCGL/YCGLVIEW.html
@@ -39,6 +39,6 @@
         });
         avalon.ready(function () {
         })
-        //@ sourceURL=YCGL.js;
+        //@ sourceURL=YCGLVIEW.js;
     </script>
 </div>
