--- a/QJY.WEB/ViewV5/AppPage/YCGL/YCGLINDEX.html
+++ b/QJY.WEB/ViewV5/AppPage/YCGL/YCGLINDEX.html
@@ -2,6 +2,8 @@
 <div ms-controller="YCGLINDEX">
     <div class="btn-add">
         <button type="button" class="btn btn-info btn-lg" ms-click="AddView('YCGL')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加用车</button>
+                <a class="btn btn-info btn-lg" ms-click="dcycgl()"><i class="iconfont icon-dc ft12 mr5"></i>导出</a>
+
     </div>
     <div class="tab-filter-type">
         <div class="oh">
@@ -36,6 +38,9 @@
                 }
             })
             tempindex.BindData();
+        },
+        dcycgl: function () {
+                $(this).attr("href", "/API/VIEWAPI.ashx?Action=YCGL_EXPORTYCGL");
         },
         BindData: function () {
             $('#calendar').html("");
